Fixed navigation alignment on top

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ body {
   display: flex;
   min-height: 100vh;
   align-items: center;
-  justify-content: center;
+  /*justify-content: center;*/
   padding: 16px;
   width: 80%;
   flex-direction: column;
@@ -130,7 +130,7 @@ button:hover {
 .nav {
   display: flex;
   flex-direction: row;
-
+  margin: 0;
   /* float: right; */
   width: 100%;
   justify-content: space-between;
